Add scheduler to the context
